# mcp-outlook

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  EXAMPLES.md  LICENSE  OPTIMIZATIONS.md  PREPARATION_SUMMARY.md  PRE_PUBLISH_CHECKLIST.md  PUBLISHING_GUIDE.md  QUICK_START.md  README.md  install.bat  publish.bat  pyproject.toml  requirements.txt  run_server.bat  start_mcp_server.bat
src/: __init__.py  outlook_mcp.py
tests/: __init__.py  test_advanced.py  test_connection.py  test_outlook_mcp.py  test_tools.py
